# bw-vault

./: README.md  pyproject.toml
.serena/: project.yml
src/bw_vault/: bw_session.py  config.py  main.py  vault.py
tests/: test_bw_session.py  test_config.py  test_main.py  test_vault.py
