[project]
name = "bw-vault"
version = "0.1.3"
requires-python = ">=3.12"
dependencies = [
    "cli-cache @ git+https://github.com/hskksk/cli-cache",
]

[project.scripts]
bw-vault = "bw_vault.main:main"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
